Wed Apr 21 13:27:43 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * USAGE:
          Aded vc8.

Wed Apr 21 13:06:44 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/VC8ProjectCreator.pm:
        * modules/VC8WorkspaceCreator.pm:
        * modules/MWC.pm:
        * modules/MPC.pm:
          Added Visual C++ 8 MPC template. This is for the Microsoft
          Visual Studio 8 Whidbey March 2004 Preview.

Mon Apr 19 13:44:16 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:
        * modules/ProjectCreator.pm:

          When subtracting values from mapped keywords, we must expand
          template values in order to ensure that the values that are being
          subtracted are actually removed.  This has a side effect of
          expanding template values during subtraction even if the project
          creator type does not normally expand template values.

Fri Apr 16 08:05:19 2004  Chad Elliott  <elliott_c@ociweb.com>

        * prj_install.pl:

          This script reads .ins files generated by MPC and installs
          portions of a project into a user specified location.

Thu Apr 15 13:16:03 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a bug where generating the hierarchical workspace would have
          the wrong build ordering.  It was a subtle bug that had to do with
          the way projects were sorted.

Wed Apr 14 07:41:58 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Modified the file exclusion behavior to work correctly with
          grouped files within components.

Tue Apr 13 13:46:14 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * USAGE:

          Removed ACE specific references and documentation.

        * modules/ProjectCreator.pm:

          Added wildcard support (*?[]) for component lists and the ability