@@ -40,45 +40,4 @@ sub pre_workspace {
 }
 
 
-sub print_inner_project {
-  my($self)  = shift;
-  my($fh)    = shift;
-  my($gen)   = shift;
-  my($pguid) = shift;
-  my($deps)  = shift;
-  my($project_name) = shift;
-  my($name_to_guid_map) = shift;
-
-  my($crlf) = $self->crlf();
-  print $fh "\tProjectSection(ProjectDependencies) = postProject$crlf";
-  my($darr) = $self->create_array($deps);
-  foreach my $dep (@$darr) {
-    ## Avoid cirular dependencies
-    if ($project_name ne $dep) {
-      my($guid) = $name_to_guid_map->{$dep};
-      if (defined $guid) {
-        print $fh "\t\t{$guid} = {$guid}$crlf";
-      }
-    }
-  }
-  print $fh "\tEndProjectSection$crlf";
-}
-
-
-sub print_configs {
-  my($self)    = shift;
-  my($fh)      = shift;
-  my($configs) = shift;
-  my($crlf)    = $self->crlf();
-  foreach my $key (sort keys %$configs) {
-    print $fh "\t\t$key = $key$crlf";
-  }
-}
-
-
-sub print_dependencies {
-  ## These are done in the print_inner_project method
-}
-
-
 1;
